# stuf

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  rust.yml
old/: Makefile  README.md  deny.toml
old/tough/: Cargo.toml
old/tough-kms/: CHANGELOG.md
old/tough-kms/src/: client.rs
old/tough-ssm/src/: error.rs
old/tough/src/: cache.rs  io.rs  lib.rs  sign.rs  transport.rs
old/tough/src/editor/: signed.rs  targets.rs
old/tough/src/schema/: verify.rs
old/tough/tests/: repo_editor.rs  test_utils.rs
old/tough/tests/data/delegation-targets/: a.txt
old/tuftool/: CHANGELOG.md  Cargo.toml  README.md
old/tuftool/src/: add_role.rs  clone.rs  main.rs  root.rs  update.rs
old/tuftool/tests/: create_command.rs  delegation_commands.rs  download_command.rs  root_command.rs  test_utils.rs
olpc-cjson/src/: lib.rs
stuf-canonical/: Cargo.toml
stuf-core/: Cargo.toml
stuf-core/src/: artifact.rs  error.rs  lib.rs  trust.rs
stuf-encoding/: Cargo.toml
stuf-encoding/src/: canonical.rs  lib.rs
stuf-encoding/src/heap/: error.rs  mod.rs
stuf-encoding/src/heap/canonicalize/: mod.rs
stuf-encoding/src/heap/combined/: mod.rs
stuf-encoding/src/heap/decode/: mod.rs
stuf-encoding/src/heap/jcs/: mod.rs
stuf-encoding/src/heap/json/: mod.rs
stuf-encoding/src/no_heap/: README.md  jcs.rs  json.rs  mod.rs
stuf-env/: Cargo.toml
stuf-env/src/: lib.rs
stuf-env/src/clock/: mod.rs
stuf-env/src/crypto/: ed25519.rs  mod.rs  sha256.rs
stuf-env/src/encoding/: mod.rs
stuf-env/src/storage/: mod.rs
stuf-env/src/transport/: mock.rs  mod.rs
stuf-examples/: Cargo.toml
stuf-examples/publisher/: Cargo.toml
stuf-examples/publisher/src/: main.rs
stuf-examples/toaster/: Cargo.toml  build.rs
stuf-examples/toaster-no-heap/: Cargo.toml  memory.x
stuf-examples/toaster-no-heap/src/: main.rs
stuf-examples/toaster/factory/: root.json
stuf-examples/toaster/src/: main 2.rs  main.rs
stuf-primitives/: Cargo.toml
stuf-protocols/: Cargo.toml
stuf-protocols/tuf/: Cargo.toml
stuf-protocols/tuf/src/: error.rs  lib.rs
stuf-protocols/tuf/src/encoding/: mod.rs
stuf-protocols/tuf/src/encoding/canonicalize/: jcs.rs  mod.rs
stuf-protocols/tuf/src/encoding/decode/: json.rs
stuf-protocols/tuf/src/env/: Cargo.toml  clock.rs  mod.rs  storage.rs  transport.rs
stuf-protocols/tuf/src/schema/: keys.rs  mod.rs  role.rs  root.rs  signed.rs  snapshot.rs  targets.rs  timestamp.rs
stuf-protocols/tuf/src/sign/: traits.rs
stuf-protocols/tuf/src/verify/: chain.rs  delegation.rs  expiry.rs  hash.rs  limits.rs  mod.rs  root.rs  signatures.rs  state.rs  targets.rs
stuf-protocols/tuf/src/verify/no_heap/: README.md  mod.rs
stuf-protocols/tuf/tests/: chain.rs  expiry.rs  hash.rs  jcs.rs  limits.rs  no_heap.rs  schema.rs  signatures.rs  validation.rs  version.rs
stuf-protocols/tuf/tests/common/: mod.rs
tough/: CHANGELOG.md
tough-kms/: Cargo.toml
tough-kms/src/: error.rs
tough-kms/tests/: test_utils.rs
tough-ssm/: CHANGELOG.md  Cargo.toml
tough-ssm/src/: client.rs
tough/src/: error.rs  http.rs
tough/src/editor/: mod.rs
tough/src/schema/: mod.rs
tough/tests/: target_path_safety.rs
tough/tests/data/delegation-targets/: b.txt
tuftool/src/: download.rs  error.rs  update_targets.rs
tuftool/tests/: clone_command.rs  create_repository_integration.rs  update_command.rs
