[workspace]
members = [
    "stuf-core",
    "stuf-env",
    "stuf-protocols/tuf",
    "stuf-examples/publisher",
    "stuf-examples",
    "stuf-examples/toaster",
    "stuf-examples/toaster-no-heap",
    "stuf-encoding",
]

resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1


