[package]
name = "stuf-env"
version = "0.1.0"
edition = "2021"
description = "Environment implementations for the stuf supply chain security framework"
license = "Apache-2.0 OR MIT"

[features]
default = []
alloc = ["serde/alloc", "hex/alloc"]

# Crypto implementations
crypto-ed25519 = ["ed25519-dalek", "sha2"]

# Transport implementations
transport-mock = []

# Clock implementations
clock-fixed = []
clock-std = []


# Convenience bundles for demo
demo = ["crypto-ed25519", "transport-mock", "clock-fixed"]

[dependencies]
stuf-tuf = { path = "../stuf-protocols/tuf", default-features = false, features = ["alloc"] }

# Crypto — optional
ed25519-dalek = { version = "2.0", default-features = false, features = ["alloc"], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }


# Always needed
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
