[package]
name = "stuf-env"
version = "0.1.0"
edition = "2021"
description = "Environment abstractions and implementations for the stuf framework"
license = "Apache-2.0 OR MIT"

[features]
default = []
alloc = ["dep:hex", "hex/alloc"]

# Crypto implementations
crypto-ed25519 = ["ed25519-dalek"]
hash-sha256 = ["sha2"]

# Transport implementations
transport-mock = []

# Clock implementations
clock-fixed = []
clock-std = []

# Convenience bundles for demo
demo = ["alloc", "crypto-ed25519", "hash-sha256", "transport-mock", "clock-fixed"]

[dependencies]
# Crypto — optional
ed25519-dalek = { version = "2.0", default-features = false, features = ["alloc"], optional = true }
sha2 = { version = "0.11", default-features = false, optional = true }

# Only needed by alloc convenience helpers
hex = { version = "0.4", default-features = false, optional = true }
