[package]
name = "tough-kms"
version = "0.13.0"
description = "Implements AWS KMS as a key source for TUF signing keys"
authors = ["Shailesh Gothi <gothisg@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["TUF", "KMS"]
edition = "2018"

[features]
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
# This feature is for backward compatibility but has no effect.
aws-sdk-rust-rustls = []
fips = ["aws-lc-rs/fips", "tough/fips"]

[dependencies]
tough = { version = "0.21", path = "../tough", features = ["http"] }
aws-config = { version = "1", default-features = false, features = ["credentials-process", "default-https-client", "rt-tokio"] }
aws-lc-rs = "1"
aws-sdk-kms = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
snafu = { version = "0.8", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
pem = "3"

[dev-dependencies]
aws-smithy-runtime = "1"
aws-smithy-http = "0.63"
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
base64 = "0.22"
bytes = "1"
http = "1"
serde = "1"
serde_json = "1"
