[package]
name = "tough-ssm"
version = "0.16.0"
description = "Implements AWS SSM as a key source for TUF signing keys"
authors = ["Zac Mrowicki <mrowicki@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["TUF", "SSM"]
edition = "2018"

[features]
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
# This feature is for backward compatibility but has no effect.
aws-sdk-rust-rustls = []
fips = ["tough/fips"]

[dependencies]
tough = { version = "0.21", path = "../tough", features = ["http"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-config = { version = "1", default-features = false, features = ["credentials-process", "default-https-client", "rt-tokio"] }
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
snafu = { version = "0.8", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
