[package]
name = "tuftool"
version = "0.14.0"
description = "Utility for creating and signing The Update Framework (TUF) repositories"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["tuf", "update", "repository"]
edition = "2018"

[features]
integ = []
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
# This feature is for backward compatibility but has no effect.
aws-sdk-rust-rustls = []
fips = ["tough/fips", "rustls/fips"]

[dependencies]
aws-config = { version = "1", default-features = false, features = ["credentials-process", "default-https-client", "rt-tokio"] }
aws-lc-rs = "1"
aws-sdk-kms = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hex = "0.4"
log = "0.4"
maplit = "1"
olpc-cjson = { version = "0.1", path = "../olpc-cjson" }
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots-no-provider"] }
rustls = "0.23"
serde = "1"
serde_json = "1"
simplelog = "0.12"
snafu = { version = "0.8", features = ["backtraces-impl-backtrace-crate"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tough = { version = "0.21", path = "../tough", features = ["http"] }
tough-kms = { version = "0.13", path = "../tough-kms" }
tough-ssm = { version = "0.16", path = "../tough-ssm" }
url = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2.1"
futures = "0.3"
futures-core = "0.3"
httptest = "0.16"
