[package]
name = "publisher"
version = "0.1.0"
edition = "2021"
description = "Demo TUF metadata publisher for stuf toaster example"

[[bin]]
name = "publisher"
path = "src/main.rs"

[dependencies]
# Crypto
ed25519-dalek = { version = "2.0", default-features = false, features = ["rand_core"] }
rand = "0.10"
sha2 = { version = "0.11", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# HTTP server
tiny_http = "0.12"

# stuf
stuf-encoding = { path = "../../stuf-encoding" }
stuf-env = { path = "../../stuf-env", default-features = false, features = ["alloc", "crypto-ed25519", "hash-sha256"] }
