[package]
name = "toaster"
version = "0.1.0"
edition = "2021"
description = "stuf TUF demo — ARM Cortex-M3 firmware updater"

[[bin]]
name = "toaster"
path = "src/main.rs"

[dependencies]
sha2 = { version = "0.11", default-features = false }
serde = { version = "=1.0.219", default-features = false }
stuf-tuf = { path = "../../stuf-protocols/tuf", default-features = false, features = ["alloc", "crypto-ed25519", "hash-sha256"] }
stuf-env  = { path = "../../stuf-env", default-features = false, features = ["alloc", "crypto-ed25519", "hash-sha256", "clock-fixed"] }
stuf-encoding = { path = "../../stuf-encoding", default-features = false, features = ["alloc", "jcs"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
cortex-m-semihosting = { version = "0.5" }
panic-semihosting    = { version = "0.6" }
embedded-alloc = "0.7"
