[package]
name = "stuf-tuf"
version = "0.1.0"
edition = "2021"
description = "TUF protocol implementation for the stuf supply chain security framework"
license = "Apache-2.0 OR MIT"

[features]
default = ["std"]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc", "hex/alloc"]
client = []
publisher = []
full = ["client", "publisher"]
platform-bare-metal = ["alloc", "client"]
platform-rtos = ["alloc", "client"]
platform-cloud = ["std", "full"]

[dependencies]
serde = { version = "=1.0.219", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false }
stuf-core = { path = "../../stuf-core" }

[dev-dependencies]
stuf-env = { path = "../../stuf-env", features = ["crypto-ed25519"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = { version = "0.8" }
sha2 = { version = "0.10" }
hex = { version = "0.4" }
serde_json = { version = "1.0" }