[package]
name = "stuf-tuf"
version = "0.1.0"
edition = "2021"
description = "TUF protocol implementation for the stuf supply chain security framework"
license = "Apache-2.0 OR MIT"

[features]
default = ["std"]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc", "hex/alloc", "stuf-env/alloc", "stuf-encoding/alloc", "stuf-encoding/jcs", "stuf-encoding/json"]
no-heap = ["stuf-encoding/no-heap-jcs"]
client = []
publisher = ["alloc"]
full = ["client", "publisher"]
platform-bare-metal = ["no-heap", "client"]
platform-rtos = ["alloc", "client"]
platform-cloud = ["std", "full"]

# Crypto — forwarded to stuf-env
crypto-ed25519 = ["stuf-env/crypto-ed25519"]
hash-sha256 = ["stuf-env/hash-sha256"]

[dependencies]
serde = { version = "=1.0.219", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false, optional = true }
stuf-core = { path = "../../stuf-core" }
stuf-encoding = { path = "../../stuf-encoding", default-features = false }
stuf-env = { path = "../../stuf-env", default-features = false }

[dev-dependencies]
stuf-env = { path = "../../stuf-env", features = ["alloc", "crypto-ed25519", "hash-sha256", "transport-mock", "clock-fixed"] }
stuf-encoding = { path = "../../stuf-encoding" }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = { version = "0.8" }
hex = { version = "0.4" }
serde_json = { version = "1.0" }
