[package]
name = "stuf-tuf"
version = "0.1.0"
edition = "2021"
description = "TUF protocol implementation for the stuf supply chain security framework"
license = "Apache-2.0 OR MIT"

[features]
default = ["std"]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
serde_json = "1.0"
